tests/NormalTests/paczka1/fuzzy1/99983794.err
Error in line 21: cpGKfmQ S946 35,86
Error in line 22: K6Jz9Ma21p A748 48,4
Error in line 28: A885 S946 98,2
Error in line 16: Fte7uFJyhPO A885 44,7
Error in line 31: A885 A114 75,4
Error in line 26: K6Jz9Ma21p A885 73,8
